--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
         "watch-poll": "npm run watch -- --watch-poll",
         "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --disable-host-check --config=node_modules/laravel-mix/setup/webpack.config.js",
         "prod": "npm run production",
-        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --config=node_modules/laravel-mix/setup/webpack.config.js"
+        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "lint": "eslint"
     },
     "devDependencies": {
         "axios": "^0.19",
         "bootstrap": "^4.0.0",
         "cross-env": "^7.0",
+        "eslint": "^9.12.0",
+        "eslint-plugin-vue": "^9.29.0",
         "jquery": "^3.2",
         "laravel-mix": "^5.0.1",
         "lodash": "^4.17.19",
@@ -25,6 +28,8 @@
     },
     "dependencies": {
         "mix-tailwindcss": "^1.3.0",
-        "tailwindcss": "^2.1.4"
+        "tailwindcss": "^2.1.4",
+        "vee-validate": "^3.4.15",
+        "yup": "^1.4.0"
     }
 }
