--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,8 @@
         "barryvdh/laravel-debugbar": "^3.6",
         "facade/ignition": "^2.0",
         "fakerphp/faker": "^1.9.1",
+        "friendsofphp/php-cs-fixer": "^3.64",
+        "laravel/sail": "^1.25",
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^4.3",
         "phpunit/phpunit": "^8.5.8|^9.3.3"
